# ChessBoardAPI

./: .gitignore  CMakeLists.txt  README.md  perft.c  perft.cpp  perft_debugging.py
board/: board.cpp  board.hpp
magic/: magic.cpp  magic.hpp  rays.cpp  rays.hpp
move/: move.cpp  move.hpp  move_gen.cpp  move_gen.hpp
src/: CMakeLists.txt  bitutil.h  bitutil.h.gch  bitutil.hpp  board.c  board.cpp  board.h  board.h.gch  board.hpp  engine.c  engine.h  engine.h.gch  magic.c  magic.cpp  magic.h  magic.h.gch  magic.hpp  main.c  move.c  move.cpp  move.h  move.hpp  move_gen.c  move_gen.cpp  move_gen.h  move_gen.hpp  perft.c  rays.c  rays.cpp  rays.h  rays.h.gch  rays.hpp
testing/: perft_debugging.py
util/: bitutil.hpp
